--- a/public/styles.css
+++ b/public/styles.css
@@ -43,6 +43,14 @@ body {
   border: 3px solid var(--dark);
 }
 
+.header-logout {
+  cursor: pointer;
+}
+
+.header-logout:hover {
+  color: var(--rose);
+}
+
 .main-navbar {
   background-color: var(--rose);
   color: #fafffd;
@@ -79,6 +87,14 @@ body {
   top: 0px;
   z-index: 9999;
   display: none;
+}
+
+header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding-inline: 1em;
 }
 
 .small-navbar > ul {
@@ -218,6 +234,9 @@ body {
 }
 
 @media screen and (min-width: 769px) {
+  header {
+    padding-inline: 5em;
+  }
 }
 
 @media screen and (min-width: 1025px) {
